# Lictic-360

./: .gitignore  readme.md
log/: latest_build
shortcut/: gmapper.bash  oslam_install.bash  oslam_reset.bash
src/cam/: CMakeLists.txt  package.xml
src/cam/launch/: cam.launch.py
src/cam/src/: image_converter.h  node_video_source.cpp
src/gmapper/: CMakeLists.txt
src/gmapper/include/gmapper/: mapper.h
src/gmapper/src/: mapper.cpp  semap.cpp
src/lictic/: CMakeLists.txt  package.xml
src/lictic/config/: husky_params.yaml  params_husky.yaml  params_sim.yaml  sim_params.yaml
src/lictic/launch/: husky.launch.py  sim.launch.py
src/merger/: setup.py
src/merger/merger/: example.py  lidar_limiter.py  odom_tf_rebroadcaster.py
src/ros_deep_learning/: CMakeLists.txt
src/ros_deep_learning/launch/: video_source.ros2v2.launch
src/segnet/: package.xml  setup.cfg  setup.py
src/segnet/config/: denet_params.yaml
src/segnet/customs/: convert.py  onnxrun.py  ulconverts.py
src/segnet/launch/: denet.launch.py  segnet.launch.py
src/segnet/segnet/: denet.py  denset.py  hazard.py  jetson_denet.py  jetson_segnet.py  merging.py  segnet.py  yolo_denset.py  yolo_segnet.py
src/utils/gmapper/: CMakeLists.txt  package.xml
src/visual/: setup.py
src/visual/visual/: kivynode.py  kvnode.py  map.py  qtnode.py  tkinter.py
src/yolosed/: setup.py
src/yolosed/config/: husky_params.yaml  segmentation_params.yaml
src/yolosed/launch/: husky.launch.py  segmentation.launch.py  yolosed.launch.py
src/yolosed/yolosed/: hazard.py  segmentation.py
support/relay/: odom.cpp
(+26 files in other folders)
